# linux-file-archiver

./: .gitignore  LICENSE  README.md  TASK.md  config.example.toml  pyproject.toml
archiver/: __init__.py  archiver.py  cli.py  config.py  locking.py
debian/: changelog  control  copyright  install  postinst  rules
docs/adr/: 001-architecture.md  002-robustness.md  003-user-group-handling.md  004-file-operations.md  005-cli-logging-config.md  006-testing-strategy.md  007-debian-packaging.md
docs/agents/: QUESTIONS.md
docs/plans/: debian-packaging.md
docs/user/: AI_USAGE_LOG.md  FUTURE-STANDBY.md  PROGRESS_LOG.md
tests/: conftest.py  test_archiver.py  test_cli.py  test_config.py  test_locking.py
